[gd_scene load_steps=22 format=3 uid="uid://b744b822mtrrr"]

[ext_resource type="Script" path="res://scenes/game_main/mini_games/discs_mini_game/discs_mini_game.gd" id="1_5s1p5"]
[ext_resource type="Texture2D" uid="uid://dqbxmj6d7pr2" path="res://assets/spr_icons_16x16.png" id="2_sijm5"]
[ext_resource type="Texture2D" uid="uid://tym87tug1u8y" path="res://scenes/game_main/mini_games/discs_mini_game/spr_disc_bg.png" id="3_6q6v4"]
[ext_resource type="Texture2D" uid="uid://d6ejtgyg018a" path="res://scenes/game_main/mini_games/discs_mini_game/common/spr_slice_1_highlight.png" id="4_s2rot"]
[ext_resource type="Texture2D" uid="uid://7ehscc0mqrag" path="res://scenes/game_main/mini_games/discs_mini_game/disc_1/spr_slice_1.png" id="5_j06ye"]
[ext_resource type="Texture2D" uid="uid://2aabjdksqqxq" path="res://scenes/game_main/mini_games/discs_mini_game/common/spr_slice_2_highlight.png" id="6_2ie62"]
[ext_resource type="Texture2D" uid="uid://bqirpjrvvvo0i" path="res://scenes/game_main/mini_games/discs_mini_game/common/spr_slice_1_overlay.png" id="6_m5o26"]
[ext_resource type="Texture2D" uid="uid://kb4pdgranine" path="res://scenes/game_main/mini_games/discs_mini_game/disc_1/spr_slice_2.png" id="7_jlvxv"]
[ext_resource type="Script" path="res://addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" id="8_ohbu0"]
[ext_resource type="Texture2D" uid="uid://b5pq3y8b8i1g6" path="res://scenes/game_main/mini_games/discs_mini_game/common/spr_slice_3_highlight.png" id="8_olr08"]
[ext_resource type="Texture2D" uid="uid://bh73smdr8h3nv" path="res://scenes/game_main/mini_games/discs_mini_game/disc_1/spr_slice_3.png" id="9_f4ubd"]
[ext_resource type="Texture2D" uid="uid://i813quu4owh2" path="res://scenes/game_main/mini_games/discs_mini_game/common/spr_slice_2_overlay.png" id="9_ux2n0"]
[ext_resource type="Texture2D" uid="uid://dveipp5o15232" path="res://scenes/game_main/mini_games/discs_mini_game/common/spr_slice_4_highlight.png" id="10_474to"]
[ext_resource type="Texture2D" uid="uid://34hyaloarboo" path="res://scenes/game_main/mini_games/discs_mini_game/disc_1/spr_slice_4.png" id="11_fkkoq"]
[ext_resource type="AudioStream" uid="uid://bp42mtr5y8nvl" path="res://assets/sounds/misc/click.wav" id="13_1x1i6"]
[ext_resource type="Texture2D" uid="uid://88oipnp3hvp4" path="res://scenes/game_main/mini_games/discs_mini_game/common/spr_slice_3_overlay.png" id="13_dr2es"]
[ext_resource type="AudioStream" uid="uid://bd57jjixjyyq1" path="res://assets/sounds/boulder_cave_in/move_boulder.ogg" id="14_gh15r"]
[ext_resource type="Texture2D" uid="uid://cyd0rnn11tyt5" path="res://scenes/game_main/mini_games/discs_mini_game/common/spr_slice_4_overlay.png" id="16_qi5oi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3b60"]
bg_color = Color(0.188235, 0.129412, 0.176471, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_spmb2"]
atlas = ExtResource("2_sijm5")
region = Rect2(48, 0, 32, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_vr20i"]
radius = 23.0

[node name="DiscsMiniGame1" type="Node2D"]
script = ExtResource("1_5s1p5")
fixed_slice_index = 1
win_cooldown_sec = 0.5

[node name="CanvasLayer" type="PanelContainer" parent="."]
clip_contents = true
offset_right = 378.0
offset_bottom = 216.0
mouse_filter = 1

[node name="Title" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(378, 216)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k3b60")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Title"]
custom_minimum_size = Vector2(378, 216)
layout_mode = 0
offset_right = 80.0
offset_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Title/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Title/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Rotate the Stonediscs"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Title/CenterContainer/HBoxContainer"]
position = Vector2(187, 12)
texture = SubResource("AtlasTexture_spmb2")

[node name="MiniGame" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(378, 216)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_k3b60")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MiniGame"]
custom_minimum_size = Vector2(378, 216)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -108.0
offset_right = 189.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DiskContainer" type="MarginContainer" parent="CanvasLayer/MiniGame/CenterContainer"]
layout_mode = 2

[node name="BG" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer"]
texture = ExtResource("3_6q6v4")

[node name="Slice1" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer" groups=["Slices"]]
texture = ExtResource("5_j06ye")

[node name="Highlight" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice1"]
texture = ExtResource("4_s2rot")

[node name="Overlay" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice1"]
visible = false
texture = ExtResource("6_m5o26")

[node name="Area2D" type="Area2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice1/Area2D"]
visible = false
shape = SubResource("CircleShape2D_vr20i")

[node name="Slice2" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer" groups=["Slices"]]
rotation = 1.74533
texture = ExtResource("7_jlvxv")

[node name="Highlight" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice2"]
texture = ExtResource("6_2ie62")

[node name="Overlay" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice2"]
visible = false
texture = ExtResource("9_ux2n0")

[node name="Area2D" type="Area2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice2"]

[node name="DonutCollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice2/Area2D"]
visible = false
polygon = PackedVector2Array(2.705e-15, -44.1775, 4.33015, -43.9648, 8.6186, -43.3286, 12.8241, -42.2752, 16.906, -40.8147, 20.8251, -38.9611, 24.5437, -36.7323, 28.0259, -34.1497, 31.2382, -31.2382, 34.1497, -28.0259, 36.7323, -24.5437, 38.9611, -20.8251, 40.8147, -16.906, 42.2752, -12.8241, 43.3286, -8.6186, 43.9648, -4.33015, 44.1775, 0, 43.9648, 4.33015, 43.3286, 8.6186, 42.2752, 12.8241, 40.8147, 16.906, 38.9611, 20.8251, 36.7323, 24.5437, 34.1497, 28.0259, 31.2382, 31.2382, 28.0259, 34.1497, 24.5437, 36.7323, 20.8251, 38.9611, 16.906, 40.8147, 12.8241, 42.2752, 8.6186, 43.3286, 4.33015, 43.9648, 2.705e-15, 44.1775, -4.33015, 43.9648, -8.6186, 43.3286, -12.8241, 42.2752, -16.906, 40.8147, -20.8251, 38.9611, -24.5437, 36.7323, -28.0259, 34.1497, -31.2382, 31.2382, -34.1497, 28.0259, -36.7323, 24.5437, -38.9611, 20.8251, -40.8147, 16.906, -42.2752, 12.8241, -43.3286, 8.6186, -43.9648, 4.33015, -44.1775, 5.41e-15, -43.9648, -4.33015, -43.3286, -8.6186, -42.2752, -12.8241, -40.8147, -16.906, -38.9611, -20.8251, -36.7323, -24.5437, -34.1497, -28.0259, -31.2382, -31.2382, -28.0259, -34.1497, -24.5437, -36.7323, -20.8251, -38.9611, -16.906, -40.8147, -12.8241, -42.2752, -8.6186, -43.3286, -4.33015, -43.9648, -8.11501e-15, -44.1775, -4.42006e-15, -24.0625, -2.35854, -23.9466, -4.69436, -23.6001, -6.98497, -23.0264, -9.20832, -22.2309, -11.343, -21.2212, -13.3684, -20.0072, -15.2651, -18.6006, -17.0148, -17.0148, -18.6006, -15.2651, -20.0072, -13.3684, -21.2212, -11.343, -22.2309, -9.20832, -23.0264, -6.98497, -23.6001, -4.69436, -23.9466, -2.35854, -24.0625, 2.94671e-15, -23.9466, 2.35854, -23.6001, 4.69436, -23.0264, 6.98497, -22.2309, 9.20832, -21.2212, 11.343, -20.0072, 13.3684, -18.6006, 15.2651, -17.0148, 17.0148, -15.2651, 18.6006, -13.3684, 20.0072, -11.343, 21.2212, -9.20832, 22.2309, -6.98497, 23.0264, -4.69436, 23.6001, -2.35854, 23.9466, 1.47335e-15, 24.0625, 2.35854, 23.9466, 4.69436, 23.6001, 6.98497, 23.0264, 9.20832, 22.2309, 11.343, 21.2212, 13.3684, 20.0072, 15.2651, 18.6006, 17.0148, 17.0148, 18.6006, 15.2651, 20.0072, 13.3684, 21.2212, 11.343, 22.2309, 9.20832, 23.0264, 6.98497, 23.6001, 4.69436, 23.9466, 2.35854, 24.0625, 0, 23.9466, -2.35854, 23.6001, -4.69436, 23.0264, -6.98497, 22.2309, -9.20832, 21.2212, -11.343, 20.0072, -13.3684, 18.6006, -15.2651, 17.0148, -17.0148, 15.2651, -18.6006, 13.3684, -20.0072, 11.343, -21.2212, 9.20832, -22.2309, 6.98497, -23.0264, 4.69436, -23.6001, 2.35854, -23.9466, 1.47335e-15, -24.0625, 0.0001, -44.1774)
script = ExtResource("8_ohbu0")
radius = 34.12
width = 20.115
quality = 64

[node name="Slice3" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer" groups=["Slices"]]
rotation = 1.74533
texture = ExtResource("9_f4ubd")

[node name="Highlight" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice3"]
texture = ExtResource("8_olr08")

[node name="Overlay" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice3"]
visible = false
texture = ExtResource("13_dr2es")

[node name="Area2D" type="Area2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice3"]

[node name="DonutCollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice3/Area2D"]
visible = false
polygon = PackedVector2Array(4.04748e-15, -66.1025, 6.47918, -65.7842, 12.896, -64.8324, 19.1885, -63.2561, 25.2963, -61.0707, 31.1605, -58.2972, 36.7246, -54.9622, 41.935, -51.0979, 46.7415, -46.7415, 51.0979, -41.935, 54.9622, -36.7246, 58.2972, -31.1605, 61.0707, -25.2963, 63.2561, -19.1885, 64.8324, -12.896, 65.7842, -6.47918, 66.1025, 0, 65.7842, 6.47918, 64.8324, 12.896, 63.2561, 19.1885, 61.0707, 25.2963, 58.2972, 31.1605, 54.9622, 36.7246, 51.0979, 41.935, 46.7415, 46.7415, 41.935, 51.0979, 36.7246, 54.9622, 31.1605, 58.2972, 25.2963, 61.0707, 19.1885, 63.2561, 12.896, 64.8324, 6.47918, 65.7842, 4.04748e-15, 66.1025, -6.47918, 65.7842, -12.896, 64.8324, -19.1885, 63.2561, -25.2963, 61.0707, -31.1605, 58.2972, -36.7246, 54.9622, -41.935, 51.0979, -46.7415, 46.7415, -51.0979, 41.935, -54.9622, 36.7246, -58.2972, 31.1605, -61.0707, 25.2963, -63.2561, 19.1885, -64.8324, 12.896, -65.7842, 6.47918, -66.1025, 8.09495e-15, -65.7842, -6.47918, -64.8324, -12.896, -63.2561, -19.1885, -61.0707, -25.2963, -58.2972, -31.1605, -54.9622, -36.7246, -51.0979, -41.935, -46.7415, -46.7415, -41.935, -51.0979, -36.7246, -54.9622, -31.1605, -58.2972, -25.2963, -61.0707, -19.1885, -63.2561, -12.896, -64.8324, -6.47918, -65.7842, -1.21424e-14, -66.1025, -8.44749e-15, -45.9875, -4.50756, -45.7661, -8.97172, -45.1039, -13.3495, -44.0073, -17.5987, -42.4869, -21.6784, -40.5574, -25.5493, -38.2372, -29.1742, -35.5488, -32.5181, -32.5181, -35.5488, -29.1742, -38.2372, -25.5493, -40.5574, -21.6784, -42.4869, -17.5987, -44.0073, -13.3495, -45.1039, -8.97172, -45.7661, -4.50756, -45.9875, 5.63166e-15, -45.7661, 4.50756, -45.1039, 8.97172, -44.0073, 13.3495, -42.4869, 17.5987, -40.5574, 21.6784, -38.2372, 25.5493, -35.5488, 29.1742, -32.5181, 32.5181, -29.1742, 35.5488, -25.5493, 38.2372, -21.6784, 40.5574, -17.5987, 42.4869, -13.3495, 44.0073, -8.97172, 45.1039, -4.50756, 45.7661, 2.81583e-15, 45.9875, 4.50756, 45.7661, 8.97172, 45.1039, 13.3495, 44.0073, 17.5987, 42.4869, 21.6784, 40.5574, 25.5493, 38.2372, 29.1742, 35.5488, 32.5181, 32.5181, 35.5488, 29.1742, 38.2372, 25.5493, 40.5574, 21.6784, 42.4869, 17.5987, 44.0073, 13.3495, 45.1039, 8.97172, 45.7661, 4.50756, 45.9875, 0, 45.7661, -4.50756, 45.1039, -8.97172, 44.0073, -13.3495, 42.4869, -17.5987, 40.5574, -21.6784, 38.2372, -25.5493, 35.5488, -29.1742, 32.5181, -32.5181, 29.1742, -35.5488, 25.5493, -38.2372, 21.6784, -40.5574, 17.5987, -42.4869, 13.3495, -44.0073, 8.97172, -45.1039, 4.50756, -45.7661, 2.81583e-15, -45.9875, 0.0001, -66.1024)
script = ExtResource("8_ohbu0")
radius = 56.045
width = 20.115
quality = 64

[node name="Slice4" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer" groups=["Slices"]]
rotation = 0.349066
texture = ExtResource("11_fkkoq")

[node name="Highlight" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice4"]
texture = ExtResource("10_474to")

[node name="Overlay" type="Sprite2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice4"]
visible = false
texture = ExtResource("16_qi5oi")

[node name="Area2D" type="Area2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice4"]

[node name="DonutCollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/MiniGame/CenterContainer/DiskContainer/Slice4/Area2D"]
visible = false
polygon = PackedVector2Array(5.50614e-15, -89.925, 8.81419, -89.492, 17.5435, -88.1971, 26.1038, -86.0529, 34.4128, -83.0799, 42.3904, -79.3068, 49.9597, -74.7699, 57.0478, -69.513, 63.5866, -63.5866, 69.513, -57.0478, 74.7699, -49.9597, 79.3068, -42.3904, 83.0799, -34.4128, 86.0529, -26.1038, 88.1971, -17.5435, 89.492, -8.81419, 89.925, 0, 89.492, 8.81419, 88.1971, 17.5435, 86.0529, 26.1038, 83.0799, 34.4128, 79.3068, 42.3904, 74.7699, 49.9597, 69.513, 57.0478, 63.5866, 63.5866, 57.0478, 69.513, 49.9597, 74.7699, 42.3904, 79.3068, 34.4128, 83.0799, 26.1038, 86.0529, 17.5435, 88.1971, 8.81419, 89.492, 5.50614e-15, 89.925, -8.81419, 89.492, -17.5435, 88.1971, -26.1038, 86.0529, -34.4128, 83.0799, -42.3904, 79.3068, -49.9597, 74.7699, -57.0478, 69.513, -63.5866, 63.5866, -69.513, 57.0478, -74.7699, 49.9597, -79.3068, 42.3904, -83.0799, 34.4128, -86.0529, 26.1038, -88.1971, 17.5435, -89.492, 8.81419, -89.925, 1.10123e-14, -89.492, -8.81419, -88.1971, -17.5435, -86.0529, -26.1038, -83.0799, -34.4128, -79.3068, -42.3904, -74.7699, -49.9597, -69.513, -57.0478, -63.5866, -63.5866, -57.0478, -69.513, -49.9597, -74.7699, -42.3904, -79.3068, -34.4128, -83.0799, -26.1038, -86.0529, -17.5435, -88.1971, -8.81419, -89.492, -1.65184e-14, -89.925, -1.25176e-14, -68.145, -6.67938, -67.8169, -13.2944, -66.8356, -19.7814, -65.2107, -26.078, -62.9578, -32.1233, -60.0985, -37.8593, -56.6605, -43.2307, -52.6768, -48.1858, -48.1858, -52.6768, -43.2307, -56.6605, -37.8593, -60.0985, -32.1233, -62.9578, -26.078, -65.2107, -19.7814, -66.8356, -13.2944, -67.8169, -6.67938, -68.145, 8.34508e-15, -67.8169, 6.67938, -66.8356, 13.2944, -65.2107, 19.7814, -62.9578, 26.078, -60.0985, 32.1233, -56.6605, 37.8593, -52.6768, 43.2307, -48.1858, 48.1858, -43.2307, 52.6768, -37.8593, 56.6605, -32.1233, 60.0985, -26.078, 62.9578, -19.7814, 65.2107, -13.2944, 66.8356, -6.67938, 67.8169, 4.17254e-15, 68.145, 6.67938, 67.8169, 13.2944, 66.8356, 19.7814, 65.2107, 26.078, 62.9578, 32.1233, 60.0985, 37.8593, 56.6605, 43.2307, 52.6768, 48.1858, 48.1858, 52.6768, 43.2307, 56.6605, 37.8593, 60.0985, 32.1233, 62.9578, 26.078, 65.2107, 19.7814, 66.8356, 13.2944, 67.8169, 6.67938, 68.145, 0, 67.8169, -6.67938, 66.8356, -13.2944, 65.2107, -19.7814, 62.9578, -26.078, 60.0985, -32.1233, 56.6605, -37.8593, 52.6768, -43.2307, 48.1858, -48.1858, 43.2307, -52.6768, 37.8593, -56.6605, 32.1233, -60.0985, 26.078, -62.9578, 19.7814, -65.2107, 13.2944, -66.8356, 6.67938, -67.8169, 4.17254e-15, -68.145, 0.0001, -89.9249)
script = ExtResource("8_ohbu0")
radius = 79.035
width = 21.78
quality = 64

[node name="CompleteSilce" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_1x1i6")
volume_db = -9.0
bus = &"Sound"

[node name="MoveSlice" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("14_gh15r")
bus = &"Sound"

[node name="WinTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.6
